# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/poetry-testi/: pyproject.toml
laskarit/viikko1/: .#alustava-maarittely.md  gitlog.txt
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py
laskarit/viikko3/: hsl.md  monopolikaavio.md
ot-harjoitustyo/laskarit/viikko1/: komentorivi.txt
ot-harjoitustyo/laskarit/viikko2/maksukortti/: pyproject.toml
ot-harjoitustyo/laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py  maksukortti_test.py.save
ot-harjoitustyo/laskarit/viikko2/unicafe/src/tests/: maksukortti_test.py
src/: game_config.py  index.py
src/game/: game_logic.py  highscore.py  top_score.py
src/tests/: test_buttons.py  test_merge.py  test_score.py
src/ui/: board_ui.py  menu_ui.py
