[project]
name = "ohjelmistotekniikka"
version = "0.1.0"
description = ""
authors = [
    {name = "BorisVer",email = "borisversonnen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "invoke (>=2.2.0,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
