[project]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = [{ name = "BorisVer", email = "borisversonnen@gmail.com" }]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
